# personal-website

./: .env  .gitignore  Dockerfile  Procfile  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
config/: config.json
website/: __init__.py  bp_home.py
website/static/components/: _animations.scss  _buttons.scss  _mixins.scss
website/static/css/: _custom.scss  styles.css  styles.css.map  styles.scss
website/static/sections/: _about_me.scss  _contact.scss  _footer.scss  _intro.scss  _navbar.scss  _portfolio.scss
website/templates/: base.html  footer.html  nav_bar.html  navbar.html  theming_kit.html
website/templates/home/: about_me.html  contact.html  index.html  portfolio.html
